# bridgekeeper

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prospector.yaml  CNAME  CONTRIBUTING.rst  LICENSE  README.rst  changelog.html  genindex.html  index.html  modd.conf  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  test.sh  tox.ini
.circleci/: config.yml
.doctrees/: changelog.doctree  environment.pickle  index.doctree
.doctrees/api/: helpers.doctree  rest_framework.doctree  rules.doctree
.doctrees/guides/: permissions.doctree  rest_framework.doctree  rules.doctree
.doctrees/tutorial/: installation.doctree  permissions.doctree  views.doctree
.github/: dependabot.yml  main.workflow
.github/workflows/: docs.yml  test.yml  tests.yml
_modules/: index.html
_modules/bridgekeeper/: mixins.html  querysets.html  rest_framework.html  rules.html
_modules/django/db/models/: manager.html
_sources/: index.rst.txt
_sources/api/: helpers.rst.txt
_sources/guides/: permissions.rst.txt  rest_framework.rst.txt
api/: helpers.html  rest_framework.html  rules.html
bridgekeeper/: __init__.py  apps.py  backend_tests.py  backends.py  cli.py  cli_test.py  conftest.py  mixins.py  permission_map.py  predicate_attribute_tests.py  predicate_is_tests.py  predicate_many_relation_tests.py  predicate_relation_tests.py  predicates.py  querysets.py  registry.py  registry_tests.py  rest_framework.py  rest_framework_tests.py  rule_attribute_tests.py  rule_in_tests.py  rule_is_tests.py  rule_many_relation_tests.py  rule_r_tests.py  rule_relation_tests.py  rules.py
bridgekeeper/templatetags/: bridgekeeper.py
bridgekeeper/tests/: registry.py
docs/: Makefile  access_control.rst  changelog.rst  conf.py  index.rst  installation.rst  make.bat  predicates.rst  tutorial.rst
docs/_ext/: django_docs.py
docs/api/: predicates.rst  querysets.rst  rest_framework.rst  rules.rst
docs/guides/: permissions.rst  predicates.rst  rest_framework.rst  rules.rst
docs/tutorial/: installation.rst  permissions.rst  views.rst
guides/: permissions.html  rest_framework.html  rules.html
testproject/shrubberies/: apps.py  factories.py  models.py
testproject/shrubberies/migrations/: 0001_initial.py  0002_auto_20171208_0340.py
testproject/testproject/: settings.py  urls.py
tutorial/: installation.html  permissions.html  views.html
