[tool.poetry]
name = "bridgekeeper"
version = "0.9"
description = "Django permissions that work with QuerySets."
homepage = "https://bridgekeeper.leigh.party/"
repository = "https://github.com/excitedleigh/bridgekeeper"
authors = ["Leigh Brenecki <leigh@brenecki.id.au>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"

[tool.poetry.dev-dependencies]
djangorestframework = "^3.10"
pytest = "^7.4.3"
pytest-django = "^4.6.0"
prospector = "^1.10.3"
factory-boy = "^3.3.0"

sphinx = "^7.1.2"
sphinx-rtd-theme = "^1.3.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
[build-system]
requires = ["poetry>=1.7"]
build-backend = "poetry.core.masonry.api"
